--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/membership" }]
+  "rewrites": [
+    { "source": "/membership/(.*)", "destination": "/api/membership" }
+  ]
 }
